Fix load of packages.

--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -37,10 +37,10 @@ if (!require(pacman)) install.packages("pacman")
 
 library(pacman)
 
-p_load(dynfactoR)
+p_load_gh("rbagd/dynfactoR")
 p_load(forcats)
 p_load(ggthemes)
-p_load_gh(ggts)
+p_load_gh("ChandlerLutz/ggts")
 p_load(here)
 p_load(kableExtra)
 p_load(knitr)
