--- a/index/04-Results.Rmd
+++ b/index/04-Results.Rmd
@@ -240,7 +240,7 @@ irf_baseline <- irf(
   impulse = "NAM",
   n.ahead = 60,
   runs = 100,
-  ci = 0.66
+  ci = 0.95
 )
 ```
 
@@ -308,225 +308,8 @@ matrix_irf %>%
     )
 ```
 
-```{r Granger}
-Granger <- function(Cause) {
-  causality(VAR_baseline, cause = Cause)[["Granger"]][["p.value"]]
-}
-```
-
-```{r Names_VAR}
-Names_VAR <-   c(
-  "Production",
-  "Employment",
-  "Consumption",
-  "Inflation",
-  "New Orders",
-  "Wages",
-  "Labor",
-  "Federal Funds rate",
-  "Stock market index",
-  "M2",
-  "Non-Asset-Market Uncertainty"
-)
-```
-
-```{r p_values_granger}
-p_values_granger <- map_dbl(chosen_variables, Granger)
-```
-
-(ref:Granger-table) **Granger-Causality Tests**: The entries show the $p$-values for F-tests that lags of the variable in the row labeled *Regressor* do not enter the reduced form equation for all remaining variables.
-
-```{r Granger-table, results = "asis"}
-knitr::kable(
-  tibble(
-    Regressor = Names_VAR,
-    `p-values` = p_values_granger
-  )
-  , digits = 2,
-  , align = c("l", "c"),
-  , caption = "(ref:Granger-table)"
-  , caption.short = "Granger-Causality Tests",
-  , booktabs = TRUE
-  , linesep = ""
-)
-```
-
-## Robustness {#robustness}
-
-(ref:robustness-methods) **Robustness to estimation method**: The figure shows the comparation between different estimation methods ---Principal component, Quasi-maximum likelihood and Two-step--- for the non-asset-market uncertainty index. All the indexes have been standardized to make proper comparisons.
-
-```{r robustness-methods, fig.cap = "(ref:robustness-methods)", fig.scap = "Robustness to estimation method"}
-DFM_base %>% 
-  gather(PCA:QML, key = "Method", value = "Index") %>% 
-  ggplot(aes(Date, Index)) +
-    geom_cycle(fill = "grey50") +
-    geom_line(aes(colour = Method)) +
-    scale_x_date(date_breaks = "5 year", date_labels = "%Y") +
-    scale_y_continuous(limits = c(-5, 12)) +
-    scale_colour_viridis_d(option = "inferno") +
-    labs(
-      caption = "Source: Own calculations",
-      x = "",
-      y = ""
-    )
-```
-
-I perform several robustness exercises varying the econometric methodology employed to create the non-asset-market uncertainty. I estimate the uncertainty index using PCA and Two-step instead of QML. The results are summarized in Figure \@ref(fig:robustness-methods). In general the uncertainty index behaves in a very similar fashion, regardless of the factor methodology used to summarize the components of the series.
-
-```{r chosen_variables_eight}
-chosen_variables_eight <- c(
-  "Production_NAICS_log_cycle",
-  "Employment_manu_lin_cycle",
-  "Inflation_urban_cycle",
-  "Wages_manu_log_cycle",
-  "Labor_manu_lin_cycle",
-  "FederalFundsRate_lin_cycle",
-  "StockMarketIndex_log_cycle",
-  "NAM"
-)
-```
-
-```{r var_medium_lag}
-VAR_medium_lag <- VARselect(
-  VAR_data %>% select(!!!chosen_variables_eight),
-  lag.max = 24
-)
-```
-
-```{r VAR_medium}
-VAR_medium <- VAR(
-  VAR_data %>% select(!!!chosen_variables_eight),
-  lag.max = 24,
-  ic = "AIC"
-)
-```
-
-```{r irf_medium_production, warning = FALSE}
-irf_medium_production <- irf(
-  VAR_medium,
-  impulse = c("NAM", "StockMarketIndex_log_cycle"),
-  response = "Production_NAICS_log_cycle",
-  n.ahead = 60,
-  runs = 100,
-  ci = 0.66
-)
-```
-
-```{r irf_medium_production_matrix}
-irf_medium_production_matrix <- tibble(
-  Months = 0:60,
-  `Response to a uncertainty shock` = as.vector(
-    irf_medium_production[["irf"]][["NAM"]]
-  ),
-  NAM_lower = as.vector(irf_medium_production[["Lower"]][["NAM"]]),
-  NAM_upper = as.vector(irf_medium_production[["Upper"]][["NAM"]]),
-  `Response to a stock market shock` = -as.vector(
-    irf_medium_production[["irf"]][["StockMarketIndex_log_cycle"]]
-  )
-) %>%
-  gather(
-    `Response to a uncertainty shock`,
-    `Response to a stock market shock`,
-    key = "Imp",
-    value = "Res"
-  )
-```
-
-(ref:production-medium) **Decline of production under uncertainty**: The Figure shows the reaction of industrial production in manufacturing to an unexpected increment of non-asset-market uncertainty and to an unexpected fall the stock-market (model with 3 lags, selected by the Akaike Information Criterion), based on 1000 replications. The estimation period runs from January 1985 to July 2017. The axe is in percentage. Confidence bands (66 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
-
-```{r production-medium, fig.cap = "(ref:production-medium)", fig.scap = "Decline of production under uncertainty", out.extra = ""}
-irf_medium_production_matrix %>%
-  ggplot(aes(Months, Res)) +
-    geom_hline(aes(yintercept = 0), size = 0.125) +
-    geom_ribbon(
-      data = irf_medium_production_matrix %>% 
-        filter(Imp == "Response to a uncertainty shock"),
-      aes(ymin = NAM_lower, ymax = NAM_upper),
-      fill = "steelblue",
-      alpha = 0.125
-    ) +
-    geom_line(aes(colour = Imp, linetype = Imp)) +
-    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
-    scale_y_continuous(breaks = seq(0.20, -0.60, by = -0.05)) +
-    scale_color_manual(values = c(viridis(1), "steelblue")) +
-    scale_linetype_manual(values = c("dotdash", "dashed")) +
-    labs(
-      caption = "Source: Own calculations",
-      x = "Months after the shock",
-      y = "% impact on production",
-      colour = "",
-      linetype = ""
-    ) +
-    theme(legend.position = "bottom")
-```
-
-```{r irf_medium_employment, warning = FALSE}
-irf_medium_employment <- irf(
-  VAR_medium,
-  impulse = c("NAM", "StockMarketIndex_log_cycle"),
-  response = "Employment_manu_lin_cycle",
-  n.ahead = 60,
-  runs = 100,
-  ci = 0.66
-)
-```
-
-```{r irf_medium_employment_matrix}
-irf_medium_employment_matrix <- tibble(
-  Months = 0:60,
-  `Response to a uncertainty shock` = as.vector(
-    irf_medium_employment[["irf"]][["NAM"]]
-  ),
-  NAM_lower = as.vector(irf_medium_employment[["Lower"]][["NAM"]]),
-  NAM_upper = as.vector(irf_medium_employment[["Upper"]][["NAM"]]),
-  `Response to a stock market shock` = -as.vector(
-    irf_medium_employment[["irf"]][["StockMarketIndex_log_cycle"]]
-  )
-) %>%
-  gather(
-    `Response to a uncertainty shock`,
-    `Response to a stock market shock`,
-    key = "Imp",
-    value = "Res"
-  )
-```
-
-(ref:employment-medium) **Decline of employment under uncertainty**: The Figure shows the reaction of employment in manufacturing to an unexpected increment of non-asset-market uncertainty and to an unexpected fall the stock-market, based on 1000 replications. The estimation period runs from January 1985 to July 2017. The axe is in percentage. Confidence bands (66 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
-
-```{r employment-medium, fig.cap = "(ref:employment-medium)", fig.scap = "Decline of employment under uncertainty", out.extra = ""}
-irf_medium_employment_matrix %>%
-  ggplot(aes(Months, Res)) +
-    geom_hline(aes(yintercept = 0), size = 0.125) +
-    geom_ribbon(
-      data = irf_medium_employment_matrix %>%
-        filter(Imp == "Response to a uncertainty shock"),
-      aes(ymin = NAM_lower, ymax = NAM_upper),
-      fill = "steelblue",
-      alpha = 0.125
-    ) +
-    geom_line(aes(colour = Imp, linetype = Imp)) +
-    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
-    scale_y_continuous(breaks = seq(20, -60, by = -10)) +
-    scale_color_manual(values = c(viridis(1), "steelblue")) +
-    scale_linetype_manual(values = c("dotdash", "dashed")) +
-    labs(
-      caption = "Source: Own calculations",
-      x = "Months after the shock",
-      y = "Impact on employment",
-      colour = "",
-      linetype = ""
-    ) +
-    theme(legend.position = "bottom")
-```
-
-The set the variables in the estimation are industrial production in manufacturing, employment in manufacturing, average hours in manufacturing, consumer price index, average hourly earnings for production workers in manufacturing, federal funds rate, stock-market index and non-asset-market uncertainty.
-
-To identify uncertainty shocks, a Cholesky ordering is used with production ordered first, followed by employment, labor, prices, wages, federal funds rate, stock market index and non-market uncertainty ordered last. The ordering is based on the assumptions that shocks instantaneously influence the stock market, then prices (wages, the consumer price index (CPI), and interest rates), and finally quantities (hours, employment, and output).
-
-Figure \@ref(fig:production-medium) plots the impulse response function of industrial production (the dashed line) to a non-market uncertainty shock. Industrial production displays a fall of around 0.30 \% within 12 months. The confidence bands (shaded area) are plotted around this, highlighting that this drop is statistically significant. For comparison to a first-moment shock, the response to a fall the stock-market is also plotted (dotted line) displaying a much more large drop over the subsequent 2 years. Figure \@ref(fig:employment-medium) repeats the same exercise for employment, displaying a similar drop in activity.
-
 ```{r fevd_medium, warning = FALSE}
-fevd_medium <- fevd(VAR_medium, 60)
+fevd_baseline <- fevd(VAR_baseline, 60)
 ```
 
 ```{r fevd_medium_production}
@@ -607,6 +390,232 @@ fevd_medium_R %>%
     )
 ```
 
+```{r Granger}
+Granger <- function(Cause) {
+  causality(VAR_baseline, cause = Cause)[["Granger"]][["p.value"]]
+}
+```
+
+```{r Names_VAR}
+Names_VAR <-   c(
+  "Production",
+  "Employment",
+  "Consumption",
+  "Inflation",
+  "New Orders",
+  "Wages",
+  "Labor",
+  "Federal Funds rate",
+  "Stock market index",
+  "M2",
+  "Non-Asset-Market Uncertainty"
+)
+```
+
+```{r p_values_granger}
+p_values_granger <- map_dbl(chosen_variables, Granger)
+```
+
+(ref:Granger-table) **Granger-Causality Tests**: The entries show the $p$-values for F-tests that lags of the variable in the row labeled *Regressor* do not enter the reduced form equation for all remaining variables.
+
+```{r Granger-table, results = "asis"}
+knitr::kable(
+  tibble(
+    Regressor = Names_VAR,
+    `p-values` = p_values_granger
+  )
+  , digits = 2,
+  , align = c("l", "c"),
+  , caption = "(ref:Granger-table)"
+  , caption.short = "Granger-Causality Tests",
+  , booktabs = TRUE
+  , linesep = ""
+)
+```
+
+## Robustness {#robustness}
+
+(ref:robustness-methods) **Robustness to estimation method**: The figure shows the comparation between the non-asset-market uncertainty index using quasi-maximum likelihood, principal component and two-step. All the indexes have been standardized to make proper comparisons.
+
+```{r robustness-methods, fig.cap = "(ref:robustness-methods)", fig.scap = "Robustness to estimation method"}
+DFM_base %>% 
+  mutate(
+    PCA = (PCA - max(PCA)) / (PCA[1] - max(PCA)) * 100,
+    `Two-step` = (
+      (`Two-step` - max(`Two-step`)) / (`Two-step`[1] - max(`Two-step`)) * 100
+    ),
+    QML = (QML - max(QML)) / (QML[1] - max(QML)) * 100
+  ) %>% 
+  gather(PCA:QML, key = "Method", value = "Index") %>% 
+  ggplot(aes(Date, Index)) +
+    geom_cycle(fill = "grey50") +
+    geom_line(aes(colour = Method)) +
+    scale_x_date(date_breaks = "3 year", date_labels = "%Y") +
+    scale_y_continuous(limits = c(-100, 600)) +
+    scale_colour_viridis_d(option = "inferno") +
+    labs(
+      caption = "Source: Own calculations",
+      x = "",
+      y = ""
+    )
+```
+
+I perform several robustness exercises varying the econometric methodology employed to create the non-asset-market uncertainty index. I estimate the uncertainty index using PCA and PCA estimates runs through Kalman ﬁlter ---two-step--- instead of quasi-maximum likelihood. The results are summarized in Figure \@ref(fig:robustness-methods). In general, the uncertainty index behaves in a very similar fashion, regardless of the factor methodology used to summarize the components of the series.
+
+In the same way I employ different variable sets and orderings of the VAR estimated in [Estimates on the Impact of Non-Asset-Market Uncertainty Shocks]. First, I change the sector of the variables to the manufacturing sector with eight variables following @bloom:2009. The set the variables in the estimation are industrial production in manufacturing, employment in manufacturing, average hours in manufacturing, consumer price index, average hourly earnings for production workers in manufacturing, federal funds rate, stock-market index and non-asset-market uncertainty.
+
+To identify uncertainty shocks, a Cholesky ordering is used with production ordered first, followed by employment, labor, prices, wages, federal funds rate, stock market index and non-market uncertainty ordered last. The ordering is based on the assumptions that shocks instantaneously influence the stock market, then prices (wages, the consumer price index (CPI), and interest rates), and finally quantities (hours, employment, and output).
+
+Henceforth, Figures \@ref(fig:production-medium) and \@ref(fig:employment-medium) confirm the robustness of these VAR results to a range of alternative approaches over variable ordering and variable inclusion.
+
+```{r chosen_variables_eight}
+chosen_variables_eight <- c(
+  "Production_NAICS_log_cycle",
+  "Employment_manu_lin_cycle",
+  "Inflation_urban_cycle",
+  "Wages_manu_log_cycle",
+  "Labor_manu_lin_cycle",
+  "FederalFundsRate_lin_cycle",
+  "StockMarketIndex_log_cycle",
+  "NAM"
+)
+```
+
+```{r var_medium_lag}
+VAR_medium_lag <- VARselect(
+  VAR_data %>% select(!!!chosen_variables_eight),
+  lag.max = 24
+)
+```
+
+```{r VAR_medium}
+VAR_medium <- VAR(
+  VAR_data %>% select(!!!chosen_variables_eight),
+  lag.max = 24,
+  ic = "AIC"
+)
+```
+
+```{r irf_medium_production, warning = FALSE}
+irf_medium_production <- irf(
+  VAR_medium,
+  impulse = c("NAM", "StockMarketIndex_log_cycle"),
+  response = "Production_NAICS_log_cycle",
+  n.ahead = 60,
+  runs = 100,
+  ci = 0.95
+)
+```
+
+```{r irf_medium_production_matrix}
+irf_medium_production_matrix <- tibble(
+  Months = 0:60,
+  `Response to a uncertainty shock` = as.vector(
+    irf_medium_production[["irf"]][["NAM"]]
+  ),
+  NAM_lower = as.vector(irf_medium_production[["Lower"]][["NAM"]]),
+  NAM_upper = as.vector(irf_medium_production[["Upper"]][["NAM"]]),
+  `Response to a stock market shock` = -as.vector(
+    irf_medium_production[["irf"]][["StockMarketIndex_log_cycle"]]
+  )
+) %>%
+  gather(
+    `Response to a uncertainty shock`,
+    `Response to a stock market shock`,
+    key = "Imp",
+    value = "Res"
+  )
+```
+
+(ref:production-medium) **Decline of production under uncertainty**: The Figure shows the reaction of industrial production in manufacturing to an unexpected increment of non-asset-market uncertainty and to an unexpected fall the stock-market (model with 3 lags, selected by the Akaike Information Criterion), based on 1000 replications. The estimation period runs from January 1985 to July 2017. The axe is in percentage. Confidence bands (66 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
+
+```{r production-medium, fig.cap = "(ref:production-medium)", fig.scap = "Decline of production under uncertainty", out.extra = ""}
+irf_medium_production_matrix %>%
+  ggplot(aes(Months, Res)) +
+    geom_hline(aes(yintercept = 0), size = 0.125) +
+    geom_ribbon(
+      data = irf_medium_production_matrix %>% 
+        filter(Imp == "Response to a uncertainty shock"),
+      aes(ymin = NAM_lower, ymax = NAM_upper),
+      fill = "steelblue",
+      alpha = 0.125
+    ) +
+    geom_line(aes(colour = Imp, linetype = Imp)) +
+    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
+    scale_y_continuous(breaks = seq(0.20, -0.60, by = -0.05)) +
+    scale_color_manual(values = c(viridis(1), "steelblue")) +
+    scale_linetype_manual(values = c("dotdash", "dashed")) +
+    labs(
+      caption = "Source: Own calculations",
+      x = "Months after the shock",
+      y = "% impact on production",
+      colour = "",
+      linetype = ""
+    ) +
+    theme(legend.position = "bottom")
+```
+
+```{r irf_medium_employment, warning = FALSE}
+irf_medium_employment <- irf(
+  VAR_medium,
+  impulse = c("NAM", "StockMarketIndex_log_cycle"),
+  response = "Employment_manu_lin_cycle",
+  n.ahead = 60,
+  runs = 100,
+  ci = 0.95
+)
+```
+
+```{r irf_medium_employment_matrix}
+irf_medium_employment_matrix <- tibble(
+  Months = 0:60,
+  `Response to a uncertainty shock` = as.vector(
+    irf_medium_employment[["irf"]][["NAM"]]
+  ),
+  NAM_lower = as.vector(irf_medium_employment[["Lower"]][["NAM"]]),
+  NAM_upper = as.vector(irf_medium_employment[["Upper"]][["NAM"]]),
+  `Response to a stock market shock` = -as.vector(
+    irf_medium_employment[["irf"]][["StockMarketIndex_log_cycle"]]
+  )
+) %>%
+  gather(
+    `Response to a uncertainty shock`,
+    `Response to a stock market shock`,
+    key = "Imp",
+    value = "Res"
+  )
+```
+
+(ref:employment-medium) **Decline of employment under uncertainty**: The Figure shows the reaction of employment in manufacturing to an unexpected increment of non-asset-market uncertainty and to an unexpected fall the stock-market, based on 1000 replications. The estimation period runs from January 1985 to July 2017. The axe is in percentage. Confidence bands (66 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
+
+```{r employment-medium, fig.cap = "(ref:employment-medium)", fig.scap = "Decline of employment under uncertainty", out.extra = ""}
+irf_medium_employment_matrix %>%
+  ggplot(aes(Months, Res)) +
+    geom_hline(aes(yintercept = 0), size = 0.125) +
+    geom_ribbon(
+      data = irf_medium_employment_matrix %>%
+        filter(Imp == "Response to a uncertainty shock"),
+      aes(ymin = NAM_lower, ymax = NAM_upper),
+      fill = "steelblue",
+      alpha = 0.125
+    ) +
+    geom_line(aes(colour = Imp, linetype = Imp)) +
+    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
+    scale_y_continuous(breaks = seq(20, -60, by = -10)) +
+    scale_color_manual(values = c(viridis(1), "steelblue")) +
+    scale_linetype_manual(values = c("dotdash", "dashed")) +
+    labs(
+      caption = "Source: Own calculations",
+      x = "Months after the shock",
+      y = "Impact on employment",
+      colour = "",
+      linetype = ""
+    ) +
+    theme(legend.position = "bottom")
+```
+
+Figure \@ref(fig:production-medium) plots the impulse response function of industrial production (the dashed line) to a non-market uncertainty shock. Industrial production displays a fall of around 0.30 \% within 12 months. The confidence bands (shaded area) are plotted around this, highlighting that this drop is statistically significant. For comparison to a first-moment shock, the response to a fall the stock-market is also plotted (dotted line) displaying a much more large drop over the subsequent 2 years. Figure \@ref(fig:employment-medium) repeats the same exercise for employment, displaying a similar drop in activity.
+
 ```{r VAR_trivariate_lag}
 VAR_trivariate_lag <- VARselect(
   VAR_data %>% select(
@@ -637,7 +646,7 @@ irf_trivariate <- irf(
   response = "Production_NAICS_log_cycle",
   n.ahead = 60,
   runs = 100,
-  ci = 0.66
+  ci = 0.95
 )
 ```
 
@@ -661,7 +670,7 @@ irf_quadvariate <- irf(
   response = "Production_NAICS_log_cycle",
   n.ahead = 60,
   runs = 100,
-  ci = 0.66
+  ci = 0.95
 )
 ```
 
@@ -685,7 +694,7 @@ irf_quadvariate_reverse <- irf(
   response = "Production_NAICS_log_cycle",
   n.ahead = 60,
   runs = 100,
-  ci = 0.66
+  ci = 0.95
 )
 ```
 
@@ -723,6 +732,8 @@ tibble(
 
 ## Forecasting {#forecasting}
 
+Evaluation of the forecasting capabilities of the different models is carried on with multistep-ahead forecast, computed by iterating forward the reduced form VAR, in the Table \@ref(tab:rmsfe-non-asset-market). Because the ultimate test of a forecasting model is its out-of-sample performance, \@ref(tab:rmsfe-non-asset-market) focuses on pseudo out-of-sample forecasts over the period from 1985:M1 to 2017:M7 ---that is the \% 10 of the sample. It examines forecast horizonts of one to twenty-four quarters. The forecast $h$ steps ahead is computed by estimating the VAR through a given month, making the forecast $h$ steps ahead, reestimating the VAR through the next month, making the next forecast and so on through the forecast period.
+
 ```{r EndOfSample}
 # End of sample dates
 EndOfSample <- VAR_data %>%
@@ -734,34 +745,25 @@ EndOfSample <- VAR_data %>%
 forecast_horizont <- list(3, 6, 9, 12, 15, 18, 21, 24)
 ```
 
-```{r chosen_variables_forecast}
-chosen_variables_forecast <- c(
-  "Production_NAICS_log_cycle",
-  "Employment_manu_lin_cycle",
-  "Inflation_urban_cycle",
-  "Wages_manu_log_cycle",
-  "Labor_manu_lin_cycle",
-  "FederalFundsRate_lin_cycle",
-  "StockMarketIndex_log_cycle",
-  "NAM"
-)
+```{r indexes}
+indexes <- c("NAM", "EPU3C", "MU_JLN_h1")
 ```
 
-```{r chosen_variables_forecast_org}
-chosen_variables_forecast_org <- c(
-  "Production_NAICS_log_cycle",
-  "Employment_manu_lin_cycle",
-  "Inflation_urban_cycle",
-  "Wages_manu_log_cycle",
-  "Labor_manu_lin_cycle",
-  "FederalFundsRate_lin_cycle",
-  "StockMarketIndex_log_cycle",
-  "MU_JLN_h1"
-)
-```
-
-```{r RMSFE_VAR}
-RMSFE_VAR <- function(end_date, number_ahead, variables) {
+```{r Forecast_Error}
+Forecast_Error <- function(end_date, h, index) {
+  # Model variables
+  model_variables <- c(
+    "Production_NAICS_log_cycle",
+    "Employment_manu_lin_cycle",
+    "Inflation_urban_cycle",
+    "Wages_manu_log_cycle",
+    "Labor_manu_lin_cycle",
+    "FederalFundsRate_lin_cycle",
+    "StockMarketIndex_log_cycle"
+  )
+  
+  variables <- c(model_variables, index)  
+  
   # Estimate VAR model
   VAR_model <- VAR(
     VAR_data %>%
@@ -777,17 +779,17 @@ RMSFE_VAR <- function(end_date, number_ahead, variables) {
       between(
         Date,
         ceiling_date(end_date %m+% months(1), unit = "month") - days(1),
-        ceiling_date(end_date %m+% months(number_ahead), unit = "month") - days(1)
+        ceiling_date(end_date %m+% months(h), unit = "month") - days(1)
       )
     ) %>%
     select(!!!variables)
 
   # Compute forecast
   raw_predictions <- bind_rows(
-    predict(VAR_model, n.ahead = number_ahead)[["fcst"]],
+    predict(VAR_model, n.ahead = h)[["fcst"]],
     .id = "column_label"
   ) %>%
-    head(number_ahead) %>%
+    head(h) %>%
     select(-column_label)
 
   # Compute pseudo-out-of-sample forecast errors
@@ -795,108 +797,75 @@ RMSFE_VAR <- function(end_date, number_ahead, variables) {
 }
 ```
 
-```{r Forecast_error}
-Forecast_error <- function(n_ahead, variables_forecast) {
-  FE <- map_dfr(
-    EndOfSample %>% head(-n_ahead),
-    RMSFE_VAR,
-    number_ahead = n_ahead,
-    variables = variables_forecast
+```{r rmsfe}
+rmsfe <- function(h, index) {
+  rmsfe_raw <- map_dfr(
+    EndOfSample %>% head(-h),
+    Forecast_Error,
+    h = h,
+    index = index
   ) %>%
   summarise_all(~sqrt(mean(.)^2))
 
-  FE
+  rmsfe_raw
 }
 ```
 
-```{r Forecast_error_data, warning = FALSE}
-Forecast_error_data <- map_dfr(
-  forecast_horizont, 
-  Forecast_error, 
-  variables_forecast = chosen_variables_forecast
+```{r rmsfe_indexes}
+rmsfe_indexes <- function(index) {
+  rmsfe_tibble <- map_dfr(
+    forecast_horizont,
+    rmsfe,
+    index = index
+  )
+  
+  rmsfe_tibble
+}
+```
+
+```{r rmsfe_table}
+rmsfe_table <- map_dfr(
+  indexes,
+  rmsfe_indexes, 
+  .id = "label"
 )
-```
 
-(ref:RMSFE-non-asset-market) **Root Mean Squared Errors of Simulated Out-Of-Sample Forecasts**: Entries are the root mean squared error of forecasts computed recursively for vector autoregressions (each with three lags). Each model was estimated using data from 1985:M1 through the beginning of the forecast period.
-
-```{r}
-Forecast_error_data_org %<>%
-    rename(
-      Production = Production_NAICS_log_cycle,
-      Employment = Employment_manu_lin_cycle,
-      Labor = Labor_manu_lin_cycle,
-      Inflation = Inflation_urban_cycle,
-      Wages = Wages_manu_log_cycle,
-      `Federal Funds rate` = FederalFundsRate_lin_cycle,
-      `Stock market index` = StockMarketIndex_log_cycle,
-      `Uncertainty index (NAM)` = MU_JLN_h1
-    ) %>%
-  mutate(`Forecast Horizont` = factor(c(paste0(forecast_horizont, " months")))) %>%
-  select(`Forecast Horizont`, everything()) %>%
-  gather(
-      -`Forecast Horizont`,
-      key = "Variable",
-      value = "Temporal",
-      factor_key = TRUE
+rmsfe_table %<>% 
+  select(-(NAM:MU_JLN_h1)) %>% 
+  select(-label) %>% 
+  rename(
+    Production = Production_NAICS_log_cycle,
+    Employment = Employment_manu_lin_cycle,
+    Labor = Labor_manu_lin_cycle,
+    Inflation = Inflation_urban_cycle,
+    Wages = Wages_manu_log_cycle,
+    `Federal Funds rate` = FederalFundsRate_lin_cycle,
+    `Stock market index` = StockMarketIndex_log_cycle,
   ) %>%
-  spread(key = `Forecast Horizont`, value = "Temporal")
+  mutate(
+    `Forecast horizont` = factor(rep(str_c(forecast_horizont, " months"), 3))
+  ) %>% 
+  select(`Forecast horizont`, everything())
 ```
 
+(ref:rmsfe-non-asset-market) **Root Mean Squared Errors of Simulated Out-Of-Sample Forecasts**: Entries are the root mean squared error of forecasts computed recursively for vector autoregressions (each with three lags). Each model was estimated using data from 1985:M1 through the beginning of the forecast period.
 
-```{r RMSFE-non-asset-market, results = "asis"}
+```{r rmsfe-non-asset-market, results = "asis"}
 kable(
-  Forecast_error_data
+  rmsfe_table
   , digits = 2,
-  , align = c("l", rep("c", 8))
-  , caption = "(ref:RMSFE-non-asset-market)"
+  , align = c(rep("c", 8))
+  , caption = "(ref:rmsfe-non-asset-market)"
   , caption.short = "Root Mean Squared Errors of Simulated Out-Of-Sample Forecasts"
   , booktabs = TRUE
   , linesep = ""
 ) %>% 
-  add_header_above(c("", "Non-asset-market uncertainty" = 8)) %>% 
-  landscape()
-```
-
-
-
-
-```{r Forecast_error_data_org, warning = FALSE}
-Forecast_error_data_org <- map_dfr(
-  forecast_horizont, 
-  Forecast_error, 
-  variables_forecast = chosen_variables_forecast_org
-)
-```
-
-(ref:RMSFE-non-asset-market-org) **Root Mean Squared Errors of Simulated Out-Of-Sample Forecasts**: Entries are the root mean squared error of forecasts computed recursively for vector autoregressions (each with three lags). Each model was estimated using data from 1985:M1 through the beginning of the forecast period.
-
-```{r RMSFE-non-asset-market-org, results = "asis"}
-knitr::kable(
-  Forecast_error_data_org %>%
-    rename(
-      Production = Production_NAICS_log_cycle,
-      Employment = Employment_manu_lin_cycle,
-      Labor = Labor_manu_lin_cycle,
-      Inflation = Inflation_urban_cycle,
-      Wages = Wages_manu_log_cycle,
-      `Federal Funds rate` = FederalFundsRate_lin_cycle,
-      `Stock market index` = StockMarketIndex_log_cycle,
-      `Uncertainty index (NAM)` = MU_JLN_h1
-    ) %>%
-    mutate(`Forecast Horizont` = c(paste0(forecast_horizont, " months"))) %>%
-    select(`Forecast Horizont`, everything()) %>%
-    gather(
-      -`Forecast Horizont`,
-      key = "Variable",
-      value = "Temporal",
-      factor_key = TRUE
-    ) %>%
-    spread(key = `Forecast Horizont`, value = "Temporal")
-  , digits = 2,
-  , align = c("l", rep("c", 3))
-  , caption = "(ref:RMSFE-non-asset-market)"
-  , caption.short = "Root Mean Squared Errors of Simulated Out-Of-Sample Forecasts"
-  , booktabs = TRUE
-  , linesep = ""
-)
+  kable_styling(font_size = 8, full_width = TRUE) %>% 
+  pack_rows(index = c(
+    "Non-asset-market uncertainty index" = 8, 
+    "Economic policy uncertainty index" = 8, 
+    "Macroeconomic uncertainty index" = 8)
+  , latex_gap_space = "1em"
+  ) %>% 
+  landscape() 
 ```
