--- a/index/index.Rmd
+++ b/index/index.Rmd
@@ -16,6 +16,21 @@ bibliography: [bib/thesis.bib, bib/packages.bib]
 csl: csl/apa.csl
 lot: true
 lof: true
+header-includes:
+   - \usepackage{booktabs}
+   - \usepackage{longtable}
+   - \usepackage{array}
+   - \usepackage{multirow}
+   - \usepackage{wrapfig}
+   - \usepackage{float}
+   - \usepackage{colortbl}
+   - \usepackage{pdflscape}
+   - \usepackage{tabu}
+   - \usepackage{threeparttable}
+   - \usepackage{threeparttablex}
+   - \usepackage[normalem]{ulem}
+   - \usepackage{makecell}
+   - \usepackage{xcolor}
 ---
 
 ```{r setup, include = FALSE}
